移动spring context的位置